cargo-features = ["edition2021"]

[profile.release]
lto = true

[package]
name = "rustshell"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git_info = "0.1.2"
colored = "2"
chrono = "0.4"